- schema base dir

--- a/gnumed/gnumed/server/bootstrap/gm-debian-postinst.conf
+++ b/gnumed/gnumed/server/bootstrap/gm-debian-postinst.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/gm-debian-postinst.conf,v $
-version = $Revision: 1.24 $
+version = $Revision: 1.25 $
 
 #----------------------------------
 [installation]
@@ -47,7 +47,7 @@ version = 0.1
 database alias = core
 minimum postgresql version = 7.3
 registration database = core
-schema base directory = ../sql/
+schema base directory = /var/lib/postgres/sql/
 
 schema = $schema$
 gmconfiguration.sql
@@ -61,7 +61,7 @@ database alias = core
 minimum postgresql version = 7.3
 registration database = core
 
-schema base directory = ../sql/
+schema base directory = /var/lib/postgres/sql/
 schema = $schema$
 gmDemographics.sql
 gmDemographics-Person-views.sql
@@ -77,7 +77,7 @@ version = 0.1
 database alias = core
 minimum postgresql version = 7.3
 registration database = core
-schema base directory = ../sql/
+schema base directory = /var/lib/postgres/sql/
 
 schema = $schema$
 gmclinical.sql
@@ -93,7 +93,7 @@ version = 0.1
 database alias = core
 minimum postgresql version = 7.3
 registration database = core
-schema base directory = ../sql/
+schema base directory = /var/lib/postgres/sql/
 schema = $schema$
 gmBlobs.sql
 gmBlobsData.sql
@@ -112,7 +112,7 @@ audit fields table = audit_fields
 scoring disable = 0
 scoring table prefix = score_
 scoring fields table = scoring_fields
-schema base directory = ../sql/
+schema base directory = /var/lib/postgres/sql/
 schema = $schema$
 gmSchemaRevision.sql
 gmServices.sql
@@ -133,7 +133,7 @@ port = 5432
 template database = template1
 super user alias = postgres
 procedural language library check = yes
-schema base directory = ../sql/
+schema base directory = /var/lib/postgres/sql/
 schema = $schema$
 gmTestAccounts.sql
 $schema$
@@ -210,7 +210,10 @@ $language activation$
 
 #----------------------------------
 # $Log: gm-debian-postinst.conf,v $
-# Revision 1.24  2004-03-14 22:32:04  ncq
+# Revision 1.25  2004-03-15 22:59:34  ncq
+# - schema base dir
+#
+# Revision 1.24  2004/03/14 22:32:04  ncq
 # - postgres version -> minimum postgresql version
 #
 # Revision 1.23  2004/03/02 10:22:30  ihaywood
