- import housekeeping tables at database level

--- a/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf,v $
-version = $Revision: 1.22 $
+version = $Revision: 1.23 $
 
 #----------------------------------
 [installation]
@@ -132,6 +132,7 @@ gmCrossDB_FKs.sql
 gmCrossDB_FK-views.sql
 gmScoring.sql
 gmNotifications.sql
+gmHousekeeping.sql
 $schema$
 
 #----------------------------------
@@ -203,7 +204,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-monolithic_core.conf,v $
-# Revision 1.22  2004-03-14 22:32:04  ncq
+# Revision 1.23  2004-03-16 15:59:32  ncq
+# - import housekeeping tables at database level
+#
+# Revision 1.22  2004/03/14 22:32:04  ncq
 # - postgres version -> minimum postgresql version
 #
 # Revision 1.21  2004/03/10 14:25:08  ncq
