--- a/gnumed/gnumed/server/bootstrap/bootstrap-test_data.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-test_data.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-test_data.conf,v $
-version = $Revision: 1.5 $
+version = $Revision: 1.6 $
 
 #----------------------------------
 [installation]
@@ -38,6 +38,8 @@ schema base directory = ../sql/test-data/
 schema = $schema$
 gmDemographics-Person-test_data.sql
 test_data-Leonard_McCoy.sql
+test_data-Spock.sql
+test_data-USS_Enterprise.sql
 test_data-Christine_Chapel.sql
 test_data-Julian_Bashir.sql
 test_data-James_Kirk.sql
@@ -108,7 +110,10 @@ $language library dirs$
 
 #----------------------------------
 # $Log: bootstrap-test_data.conf,v $
-# Revision 1.5  2004-03-14 22:32:04  ncq
+# Revision 1.6  2004-03-18 11:12:24  ncq
+# - added lab data
+#
+# Revision 1.5  2004/03/14 22:32:04  ncq
 # - postgres version -> minimum postgresql version
 #
 # Revision 1.4  2004/03/02 10:22:30  ihaywood
