- add FSME schedule

--- a/gnumed/gnumed/server/bootstrap/bootstrap-de.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-de.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-de.conf,v $
-version = $Revision: 1.16 $
+version = $Revision: 1.17 $
 
 #----------------------------------
 [installation]
@@ -64,6 +64,7 @@ Impfstoffe.sql
 Impfplan-Prevenar.sql
 STIKO-Impfkalender.sql
 Impfplan-Influenza.sql
+Impfplan-FSME.sql
 $schema$
 
 [service documents-de]
@@ -141,7 +142,10 @@ $language library dirs$
 
 #----------------------------------
 # $Log: bootstrap-de.conf,v $
-# Revision 1.16  2004-03-14 22:32:04  ncq
+# Revision 1.17  2004-03-27 18:38:46  ncq
+# - add FSME schedule
+#
+# Revision 1.16  2004/03/14 22:32:04  ncq
 # - postgres version -> minimum postgresql version
 #
 # Revision 1.15  2004/03/02 10:22:30  ihaywood
