form templates for australia

--- a/gnumed/gnumed/server/bootstrap/bootstrap-au.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-au.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-au.conf,v $
-version = $Revision: 1.8 $
+version = $Revision: 1.9 $
 
 #----------------------------------
 [installation]
@@ -39,6 +39,7 @@ schema base directory = ../sql/country.specific/au/
 schema = $schema$
 gmDemographics.au.sql
 postcodes.au.sql
+gmReference.sql
 $schema$
 
 #----------------------------------
@@ -95,7 +96,10 @@ $language library dirs$
 
 #----------------------------------
 # $Log: bootstrap-au.conf,v $
-# Revision 1.8  2004-03-14 22:32:04  ncq
+# Revision 1.9  2004-04-06 04:19:03  ihaywood
+# form templates for australia
+#
+# Revision 1.8  2004/03/14 22:32:04  ncq
 # - postgres version -> minimum postgresql version
 #
 # Revision 1.7  2004/03/02 14:16:19  ncq
