- move grants into re-runnable scripts - update *.conf accordingly

--- a/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf,v $
-version = $Revision: 1.23 $
+version = $Revision: 1.24 $
 
 #----------------------------------
 [installation]
@@ -54,6 +54,7 @@ registration database = core
 schema base directory = ../sql/
 schema = $schema$
 gmDemographics.sql
+gmDemographics-Grants.sql
 gmDemographics-Person-views.sql
 gmDemographics-Person-data.sql
 gmDemographics-GIS-views.sql
@@ -204,7 +205,11 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-monolithic_core.conf,v $
-# Revision 1.23  2004-03-16 15:59:32  ncq
+# Revision 1.24  2004-04-07 18:16:06  ncq
+# - move grants into re-runnable scripts
+# - update *.conf accordingly
+#
+# Revision 1.23  2004/03/16 15:59:32  ncq
 # - import housekeeping tables at database level
 #
 # Revision 1.22  2004/03/14 22:32:04  ncq
