- added blob views

--- a/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf,v $
-version = $Revision: 1.24 $
+version = $Revision: 1.25 $
 
 #----------------------------------
 [installation]
@@ -86,6 +86,7 @@ schema base directory = ../sql/
 schema = $schema$
 gmBlobs.sql
 gmBlobsData.sql
+gmBlobViews.sql
 $schema$
 
 [service reference]
@@ -205,7 +206,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-monolithic_core.conf,v $
-# Revision 1.24  2004-04-07 18:16:06  ncq
+# Revision 1.25  2004-04-15 09:38:17  ncq
+# - added blob views
+#
+# Revision 1.24  2004/04/07 18:16:06  ncq
 # - move grants into re-runnable scripts
 # - update *.conf accordingly
 #
