reference to gmconfugration for AU config values

--- a/gnumed/gnumed/server/bootstrap/bootstrap-au.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-au.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-au.conf,v $
-version = $Revision: 1.9 $
+version = $Revision: 1.10 $
 
 #----------------------------------
 [installation]
@@ -40,6 +40,7 @@ schema = $schema$
 gmDemographics.au.sql
 postcodes.au.sql
 gmReference.sql
+gmconfiguration.sql
 $schema$
 
 #----------------------------------
@@ -96,7 +97,10 @@ $language library dirs$
 
 #----------------------------------
 # $Log: bootstrap-au.conf,v $
-# Revision 1.9  2004-04-06 04:19:03  ihaywood
+# Revision 1.10  2004-04-28 09:53:56  ihaywood
+# reference to gmconfugration for AU config values
+#
+# Revision 1.9  2004/04/06 04:19:03  ihaywood
 # form templates for australia
 #
 # Revision 1.8  2004/03/14 22:32:04  ncq
