- import lab handling regression testing data

--- a/gnumed/gnumed/server/bootstrap/bootstrap-test_data.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-test_data.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-test_data.conf,v $
-version = $Revision: 1.6 $
+version = $Revision: 1.7 $
 
 #----------------------------------
 [installation]
@@ -43,6 +43,7 @@ test_data-USS_Enterprise.sql
 test_data-Christine_Chapel.sql
 test_data-Julian_Bashir.sql
 test_data-James_Kirk.sql
+test_data-lab_regression.sql
 $schema$
 
 [service test tables]
@@ -110,7 +111,10 @@ $language library dirs$
 
 #----------------------------------
 # $Log: bootstrap-test_data.conf,v $
-# Revision 1.6  2004-03-18 11:12:24  ncq
+# Revision 1.7  2004-05-13 00:11:30  ncq
+# - import lab handling regression testing data
+#
+# Revision 1.6  2004/03/18 11:12:24  ncq
 # - added lab data
 #
 # Revision 1.5  2004/03/14 22:32:04  ncq
