- import ATC data into reference service

--- a/gnumed/gnumed/server/bootstrap/bootstrap-de.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-de.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-de.conf,v $
-version = $Revision: 1.17 $
+version = $Revision: 1.18 $
 
 #----------------------------------
 [installation]
@@ -31,6 +31,7 @@ services = $services$
 demographics-de
 clinical-de
 documents-de
+reference-de
 AMIS
 $services$
 
@@ -76,6 +77,17 @@ registration database = core
 schema base directory = ../sql/country.specific/de/
 schema = $schema$
 gmBlobs-Data.de.sql
+$schema$
+
+[service reference-de]
+name = reference
+version = 0.1
+database alias = core
+minimum postgresql version = 7.1
+registration database = core
+schema base directory = ../sql/country.specific/de/
+schema = $schema$
+gmATC.sql
 $schema$
 
 [service AMIS]
@@ -142,7 +154,10 @@ $language library dirs$
 
 #----------------------------------
 # $Log: bootstrap-de.conf,v $
-# Revision 1.17  2004-03-27 18:38:46  ncq
+# Revision 1.18  2004-06-26 22:52:45  ncq
+# - import ATC data into reference service
+#
+# Revision 1.17  2004/03/27 18:38:46  ncq
 # - add FSME schedule
 #
 # Revision 1.16  2004/03/14 22:32:04  ncq
