--- a/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf,v $
-version = $Revision: 1.25 $
+version = $Revision: 1.26 $
 
 #----------------------------------
 [installation]
@@ -168,11 +168,8 @@ database owner alias = GnuMed owner
 
 groups = $groups$
 gm-doctors
-_gm-doctors
 gm-staff_medical
-_gm-staff_medical
 gm-staff_office
-_gm-staff_office
 gm-trainees_medical
 gm-trainees_office
 gm-public
@@ -206,7 +203,11 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-monolithic_core.conf,v $
-# Revision 1.25  2004-04-15 09:38:17  ncq
+# Revision 1.26  2004-07-17 20:57:53  ncq
+# - don't use user/_user workaround anymore as we dropped supporting
+#   it (but we did NOT drop supporting readonly connections on > 7.3)
+#
+# Revision 1.25  2004/04/15 09:38:17  ncq
 # - added blob views
 #
 # Revision 1.24  2004/04/07 18:16:06  ncq
