--- a/gnumed/gnumed/server/bootstrap/gm-debian-postinst.conf
+++ b/gnumed/gnumed/server/bootstrap/gm-debian-postinst.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/gm-debian-postinst.conf,v $
-version = $Revision: 1.25 $
+version = $Revision: 1.26 $
 
 #----------------------------------
 [installation]
@@ -159,11 +159,8 @@ database owner alias = GnuMed owner
 
 groups = $groups$
 gm-doctors
-_gm-doctors
 gm-staff_medical
-_gm-staff_medical
 gm-staff_office
-_gm-staff_office
 gm-trainees_medical
 gm-trainees_office
 gm-public
@@ -210,7 +207,11 @@ $language activation$
 
 #----------------------------------
 # $Log: gm-debian-postinst.conf,v $
-# Revision 1.25  2004-03-15 22:59:34  ncq
+# Revision 1.26  2004-07-17 20:57:53  ncq
+# - don't use user/_user workaround anymore as we dropped supporting
+#   it (but we did NOT drop supporting readonly connections on > 7.3)
+#
+# Revision 1.25  2004/03/15 22:59:34  ncq
 # - schema base dir
 #
 # Revision 1.24  2004/03/14 22:32:04  ncq
