--- a/gnumed/gnumed/server/bootstrap/bootstrap-public_knoppix.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-public_knoppix.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/bootstrap-public_knoppix.conf,v $
-version = $Revision: 1.7 $
+version = $Revision: 1.8 $
 
 #----------------------------------
 [installation]
@@ -139,11 +139,8 @@ database owner alias = GnuMed owner
 
 groups = $groups$
 gm-doctors
-_gm-doctors
 gm-staff_medical
-_gm-staff_medical
 gm-staff_office
-_gm-staff_office
 gm-trainees_medical
 gm-trainees_office
 gm-public
@@ -176,7 +173,11 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-public_knoppix.conf,v $
-# Revision 1.7  2004-03-14 22:32:04  ncq
+# Revision 1.8  2004-07-17 20:57:53  ncq
+# - don't use user/_user workaround anymore as we dropped supporting
+#   it (but we did NOT drop supporting readonly connections on > 7.3)
+#
+# Revision 1.7  2004/03/14 22:32:04  ncq
 # - postgres version -> minimum postgresql version
 #
 # Revision 1.6  2003/10/31 23:24:32  ncq
