--- a/gnumed/gnumed/server/bootstrap/migrate-standard.conf
+++ b/gnumed/gnumed/server/bootstrap/migrate-standard.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/migrate-standard.conf,v $
-version = $Revision: 1.18 $
+version = $Revision: 1.19 $
 
 #----------------------------------
 [installation]
@@ -127,11 +127,8 @@ database owner alias = GnuMed owner
 
 groups = $groups$
 gm-doctors
-_gm-doctors
 gm-staff_medical
-_gm-staff_medical
 gm-staff_office
-_gm-staff_office
 gm-trainees_medical
 gm-trainees_office
 gm-public
@@ -178,7 +175,11 @@ $language activation$
 
 #----------------------------------
 # $Log: migrate-standard.conf,v $
-# Revision 1.18  2004-03-14 22:32:04  ncq
+# Revision 1.19  2004-07-17 20:57:53  ncq
+# - don't use user/_user workaround anymore as we dropped supporting
+#   it (but we did NOT drop supporting readonly connections on > 7.3)
+#
+# Revision 1.18  2004/03/14 22:32:04  ncq
 # - postgres version -> minimum postgresql version
 #
 # Revision 1.17  2003/11/28 10:00:41  ncq
