- added some example workplaces

--- a/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf,v $
-version = $Revision: 1.26 $
+version = $Revision: 1.27 $
 
 #----------------------------------
 [installation]
@@ -43,6 +43,7 @@ registration database = core
 schema base directory = ../sql/
 schema = $schema$
 gmconfiguration.sql
+gmConfigData.sql
 $schema$
 
 [service demographics]
@@ -203,7 +204,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-monolithic_core.conf,v $
-# Revision 1.26  2004-07-17 20:57:53  ncq
+# Revision 1.27  2004-07-19 14:41:55  ncq
+# - added some example workplaces
+#
+# Revision 1.26  2004/07/17 20:57:53  ncq
 # - don't use user/_user workaround anymore as we dropped supporting
 #   it (but we did NOT drop supporting readonly connections on > 7.3)
 #
