- bootstrap v_cfg_options, too

--- a/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf,v $
-version = $Revision: 1.27 $
+version = $Revision: 1.28 $
 
 #----------------------------------
 [installation]
@@ -44,6 +44,7 @@ schema base directory = ../sql/
 schema = $schema$
 gmconfiguration.sql
 gmConfigData.sql
+gmConfigViews.sql
 $schema$
 
 [service demographics]
@@ -204,7 +205,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-monolithic_core.conf,v $
-# Revision 1.27  2004-07-19 14:41:55  ncq
+# Revision 1.28  2004-09-02 00:41:04  ncq
+# - bootstrap v_cfg_options, too
+#
+# Revision 1.27  2004/07/19 14:41:55  ncq
 # - added some example workplaces
 #
 # Revision 1.26  2004/07/17 20:57:53  ncq
