--- a/gnumed/gnumed/test-area/sjtan/test-struts-3/WEB-INF/src/build.xml
+++ b/gnumed/gnumed/test-area/sjtan/test-struts-3/WEB-INF/src/build.xml
@@ -1,4 +1,4 @@
-<project name="blank" basedir="../" default="compile">
+<project name="blank" basedir="../" default="all">
 
 	<property name="lib.path" value="./lib"/>
 
