permission setting script to allow access to databases by users.

--- a/gnumed/gnumed/test-area/sjtan/test-struts-3/WEB-INF/src/build.xml
+++ b/gnumed/gnumed/test-area/sjtan/test-struts-3/WEB-INF/src/build.xml
@@ -103,7 +103,7 @@
 
 
     <!-- Create binary distribution -->
-    <target name="dist"
+    <target name="dist" depends="compile"
 	    description="Create binary distribution">
 
       <delete dir="${distpath.project}"/>
