script for unitesting; guard for unit tests where unit uses gmPhraseWheel; fixup where version of wxPython doesn't allow a child widget to be multiply inserted (gmDemographics) ; try block for later versions of wxWidgets that might fail the Add (.. w,h, ... ) because expecting Add(.. (w,h) ...)

--- a/gnumed/gnumed/client/gm-Medica2004.conf
+++ b/gnumed/gnumed/client/gm-Medica2004.conf
@@ -9,6 +9,12 @@ name = KnoppixMedica
 
 
 [backend]
+client encoding = latin1
+logins = $logins$
+sjtan
+test-doc
+any-doc
+$logins$
 # If the system locale matches this value a mismatch
 # with the database locale will be ignored.
 # Remove this option if you want to stop ignoring mismatches.
@@ -21,10 +27,6 @@ databases = $databases$
 gnumed
 gm-medica-2004
 $databases$
-logins = $logins$
-any-doc
-$logins$
-client encoding = latin1
 ports = $ports$
 5432
 $ports$
