--- a/gnumed/gnumed/client/gm-Medica2004.conf
+++ b/gnumed/gnumed/client/gm-Medica2004.conf
@@ -1,5 +1,7 @@
 # GnuMed client config file
 
+# don't touch this file
+
 [workplace]
 slave mode = 0
 slave personality = 
@@ -9,12 +11,6 @@ name = KnoppixMedica
 
 
 [backend]
-client encoding = latin1
-logins = $logins$
-sjtan
-test-doc
-any-doc
-$logins$
 # If the system locale matches this value a mismatch
 # with the database locale will be ignored.
 # Remove this option if you want to stop ignoring mismatches.
@@ -23,6 +19,10 @@ hosts = $hosts$
 localhost
 hherb.com
 $hosts$
+client encoding = latin1
+logins = $logins$
+any-doc
+$logins$
 databases = $databases$
 gnumed
 gm-medica-2004
