- update services defs

--- a/gnumed/gnumed/server/bootstrap/gm-debian-postinst.conf
+++ b/gnumed/gnumed/server/bootstrap/gm-debian-postinst.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/gm-debian-postinst.conf,v $
-version = $Revision: 1.26 $
+version = $Revision: 1.27 $
 
 #----------------------------------
 [installation]
@@ -32,14 +32,15 @@ $description$
 
 services = $services$
 config
+reference
 demographics
 clinical
 documents
+office
 $services$
 
 #----------------------------------
 # services
-#----------------------------------
 #----------------------------------
 [service config]
 name = default
@@ -48,9 +49,10 @@ database alias = core
 minimum postgresql version = 7.3
 registration database = core
 schema base directory = /var/lib/postgres/sql/
-
 schema = $schema$
 gmconfiguration.sql
+gmConfigData.sql
+gmConfigViews.sql
 $schema$
 
 
@@ -64,10 +66,12 @@ registration database = core
 schema base directory = /var/lib/postgres/sql/
 schema = $schema$
 gmDemographics.sql
+gmDemographics-Grants.sql
 gmDemographics-Person-views.sql
 gmDemographics-Person-data.sql
 gmDemographics-GIS-views.sql
 gmDemographics-GIS-data.sql
+gmDemographics-Org-views.sql
 $schema$
 
 
@@ -97,6 +101,33 @@ schema base directory = /var/lib/postgres/sql/
 schema = $schema$
 gmBlobs.sql
 gmBlobsData.sql
+gmBlobViews.sql
+$schema$
+
+
+[service reference]
+name = reference
+version = 0.1
+database alias = core
+minimum postgresql version = 7.3
+registration database = core
+schema base directory = /var/lib/postgres/sql/
+schema = $schema$
+gmReference.sql
+gmReference-data.sql
+$schema$
+
+
+[service office]
+name = administrivia
+version = 0.1
+database alias = core
+minimum postgresql version = 7.3
+registration database = core
+schema base directory = /var/lib/postgres/sql/
+schema = $schema$
+gmoffice.sql
+gmOfficeData.sql
 $schema$
 
 #----------------------------------
@@ -122,6 +153,7 @@ gmCrossDB_FKs.sql
 gmCrossDB_FK-views.sql
 gmScoring.sql
 gmNotifications.sql
+gmHousekeeping.sql
 $schema$
 
 #----------------------------------
@@ -207,7 +239,10 @@ $language activation$
 
 #----------------------------------
 # $Log: gm-debian-postinst.conf,v $
-# Revision 1.26  2004-07-17 20:57:53  ncq
+# Revision 1.27  2004-11-07 11:47:57  ncq
+# - update services defs
+#
+# Revision 1.26  2004/07/17 20:57:53  ncq
 # - don't use user/_user workaround anymore as we dropped supporting
 #   it (but we did NOT drop supporting readonly connections on > 7.3)
 #
