--- a/gnumed/gnumed/client/etc/gnumed.conf.example
+++ b/gnumed/gnumed/client/etc/gnumed.conf.example
@@ -1,39 +1,39 @@
 # GnuMed client config file
+# -------------------------------------------------------------
 
 [workplace]
 help desk = one-line contact information here
 name = <name for this workplace>
 
+[profile GnuMed - Public DB at hherb.com]
+host = hherb.com
+port = 5432
+database = gnumed
+
+[profile gnumed at localhost]
+host = localhost
+port = 5432
+database = gnumed
+
+[profile GnuMed - Public DB at anubis]
+host = anubis.homeunix.com
+port = 5432
+database = gnumed
 
 [backend]
+logins = $logins$
+any-doc
+$logins$
+
+profiles = $profiles$
+gnumed at localhost
+GnuMed - Public DB at anubis
+GnuMed - Public DB at hherb.com
+$profiles$
 
 # If the system locale matches this value a mismatch
 # with the database locale will be ignored.
 # Remove this option if you want to stop ignoring mismatches.
-ignored mismatching system locale = fr
+ignored mismatching system locale = de_DE@euro
 
-hosts = $hosts$
-localhost
-hherb.com
-anubis.homeunix.com
-$hosts$
-
-databases = $databases$
-gnumed
-$databases$
-
-logins = $logins$
-any-doc
-gm-dbowner
-test-doc
-$logins$
-
-client encoding = latin1
-
-ports = $ports$
-5432
-$ports$
-
-options = $options$
-
-$options$
+client encoding = ISO-8859-15
