- add option "keep temp files"

--- a/gnumed/gnumed/server/bootstrap/bootstrap-au.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-au.conf
@@ -6,12 +6,14 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-au.conf,v $
-version = $Revision: 1.10 $
+version = $Revision: 1.11 $
 
 #----------------------------------
 [installation]
 
 interactive = yes
+
+keep temp files = no
 
 description = $description$
 This script installs data into a GnuMed database system in
@@ -97,7 +99,10 @@ $language library dirs$
 
 #----------------------------------
 # $Log: bootstrap-au.conf,v $
-# Revision 1.10  2004-04-28 09:53:56  ihaywood
+# Revision 1.11  2004-11-24 15:36:31  ncq
+# - add option "keep temp files"
+#
+# Revision 1.10  2004/04/28 09:53:56  ihaywood
 # reference to gmconfugration for AU config values
 #
 # Revision 1.9  2004/04/06 04:19:03  ihaywood
