--- a/gnumed/gnumed/server/bootstrap/bootstrap-de.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-de.conf
@@ -6,12 +6,14 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-de.conf,v $
-version = $Revision: 1.18 $
+version = $Revision: 1.19 $
 
 #----------------------------------
 [installation]
 
 interactive = yes
+
+keep temp files = no
 
 description = $description$
 Dieses Skript installiert Daten in ein GnuMed-Datenbanksystem,
@@ -154,7 +156,10 @@ $language library dirs$
 
 #----------------------------------
 # $Log: bootstrap-de.conf,v $
-# Revision 1.18  2004-06-26 22:52:45  ncq
+# Revision 1.19  2004-11-24 15:36:31  ncq
+# - add option "keep temp files"
+#
+# Revision 1.18  2004/06/26 22:52:45  ncq
 # - import ATC data into reference service
 #
 # Revision 1.17  2004/03/27 18:38:46  ncq
