--- a/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf
@@ -6,11 +6,13 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf,v $
-version = $Revision: 1.28 $
+version = $Revision: 1.29 $
 
 #----------------------------------
 [installation]
 interactive = yes
+
+keep temp files = yes
 
 description = $description$
 This will set up a monolithic GnuMed backend with all services
@@ -205,7 +207,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-monolithic_core.conf,v $
-# Revision 1.28  2004-09-02 00:41:04  ncq
+# Revision 1.29  2004-11-24 15:36:31  ncq
+# - add option "keep temp files"
+#
+# Revision 1.28  2004/09/02 00:41:04  ncq
 # - bootstrap v_cfg_options, too
 #
 # Revision 1.27  2004/07/19 14:41:55  ncq
