--- a/gnumed/gnumed/server/bootstrap/bootstrap-public_knoppix.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-public_knoppix.conf
@@ -6,11 +6,13 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/bootstrap-public_knoppix.conf,v $
-version = $Revision: 1.8 $
+version = $Revision: 1.9 $
 
 #----------------------------------
 [installation]
 interactive = yes
+
+keep temp files = no
 
 description = $description$
 This will set up a monolithic GnuMed backend with all services
@@ -173,7 +175,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-public_knoppix.conf,v $
-# Revision 1.8  2004-07-17 20:57:53  ncq
+# Revision 1.9  2004-11-24 15:36:31  ncq
+# - add option "keep temp files"
+#
+# Revision 1.8  2004/07/17 20:57:53  ncq
 # - don't use user/_user workaround anymore as we dropped supporting
 #   it (but we did NOT drop supporting readonly connections on > 7.3)
 #
