--- a/gnumed/gnumed/server/bootstrap/gm-debian-postinst.conf
+++ b/gnumed/gnumed/server/bootstrap/gm-debian-postinst.conf
@@ -6,12 +6,14 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/gm-debian-postinst.conf,v $
-version = $Revision: 1.27 $
+version = $Revision: 1.28 $
 
 #----------------------------------
 [installation]
 
 interactive = no
+
+keep temp files = no
 
 description = $description$
 This will set up a standard monolithic test system for GnuMed
@@ -239,7 +241,10 @@ $language activation$
 
 #----------------------------------
 # $Log: gm-debian-postinst.conf,v $
-# Revision 1.27  2004-11-07 11:47:57  ncq
+# Revision 1.28  2004-11-24 15:36:31  ncq
+# - add option "keep temp files"
+#
+# Revision 1.27  2004/11/07 11:47:57  ncq
 # - update services defs
 #
 # Revision 1.26  2004/07/17 20:57:53  ncq
