--- a/gnumed/gnumed/server/bootstrap/bootstrap-amis.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-amis.conf
@@ -6,12 +6,14 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-amis.conf,v $
-version = $Revision: 1.5 $
+version = $Revision: 1.6 $
 
 #----------------------------------
 [installation]
 
 interactive = yes
+
+keep temp files = no
 
 description = $description$
 Dieses Skript installiert die Datenbankstruktur für die AMIS-
@@ -92,7 +94,10 @@ $language library dirs$
 
 #----------------------------------
 # $Log: bootstrap-amis.conf,v $
-# Revision 1.5  2004-03-14 22:32:04  ncq
+# Revision 1.6  2004-11-24 15:36:31  ncq
+# - add option "keep temp files"
+#
+# Revision 1.5  2004/03/14 22:32:04  ncq
 # - postgres version -> minimum postgresql version
 #
 # Revision 1.4  2003/11/11 19:22:57  ncq
