--- a/gnumed/gnumed/server/bootstrap/bootstrap-archive.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-archive.conf
@@ -6,12 +6,14 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-archive.conf,v $
-version = $Revision: 1.16 $
+version = $Revision: 1.17 $
 
 #----------------------------------
 [installation]
 
 interactive = yes
+
+keep temp files = no
 
 description = $description$
 - suitable for GnuMed/Archive
@@ -162,7 +164,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-archive.conf,v $
-# Revision 1.16  2004-07-17 20:57:53  ncq
+# Revision 1.17  2004-11-24 15:36:31  ncq
+# - add option "keep temp files"
+#
+# Revision 1.16  2004/07/17 20:57:53  ncq
 # - don't use user/_user workaround anymore as we dropped supporting
 #   it (but we did NOT drop supporting readonly connections on > 7.3)
 #
