--- a/gnumed/gnumed/server/bootstrap/bootstrap-test_data.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-test_data.conf
@@ -6,12 +6,14 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-test_data.conf,v $
-version = $Revision: 1.7 $
+version = $Revision: 1.8 $
 
 #----------------------------------
 [installation]
 
 interactive = yes
+
+keep temp files = no
 
 description = $description$
 This script installs test data into an existing GnuMed database
@@ -111,7 +113,10 @@ $language library dirs$
 
 #----------------------------------
 # $Log: bootstrap-test_data.conf,v $
-# Revision 1.7  2004-05-13 00:11:30  ncq
+# Revision 1.8  2004-11-24 15:36:31  ncq
+# - add option "keep temp files"
+#
+# Revision 1.7  2004/05/13 00:11:30  ncq
 # - import lab handling regression testing data
 #
 # Revision 1.6  2004/03/18 11:12:24  ncq
