--- a/gnumed/gnumed/server/bootstrap/migrate-standard.conf
+++ b/gnumed/gnumed/server/bootstrap/migrate-standard.conf
@@ -6,12 +6,14 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/migrate-standard.conf,v $
-version = $Revision: 1.19 $
+version = $Revision: 1.20 $
 
 #----------------------------------
 [installation]
 
 interactive = yes
+
+keep temp files = no
 
 description = $description$
 This will set up a standard monolithic test system for GnuMed
@@ -175,7 +177,10 @@ $language activation$
 
 #----------------------------------
 # $Log: migrate-standard.conf,v $
-# Revision 1.19  2004-07-17 20:57:53  ncq
+# Revision 1.20  2004-11-24 15:36:31  ncq
+# - add option "keep temp files"
+#
+# Revision 1.19  2004/07/17 20:57:53  ncq
 # - don't use user/_user workaround anymore as we dropped supporting
 #   it (but we did NOT drop supporting readonly connections on > 7.3)
 #
